HDPI-3859 Update tests to work with new datamodel structure, and, handle draft data ALWAYS getting submitted